// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge icon 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

<div
  className="c0"
>
  <span
    className="icon-vista"
    style={
      Object {
        "paddingTop": "0.5px",
        "position": "absolute",
      }
    }
  />
  <span
    style={
      Object {
        "paddingLeft": "10px",
      }
    }
  >
    55
  </span>
</div>
`;

exports[`Badge iconBigRounded 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
}

<button
  className="c0"
>
  <p
    className="c1"
  >
    SE
  </p>
</button>
`;

exports[`Badge primary 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

@media screen and (min-width:40em) {

}

<button
  className="c0"
>
  Test
</button>
`;

exports[`Badge secondary 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  line-height: 14px;
  display: inline-block;
  font-size: 10px;
  font-family: primary;
  text-align: center;
  font-weight: bold;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: static;
}

<button
  className="c0"
>
  Test
</button>
`;
